fix: content overflow

--- a/assets/scss/_browser.scss
+++ b/assets/scss/_browser.scss
@@ -104,7 +104,6 @@
   align-items: center;
   justify-content: center;
   gap: 34px;
-  transform: scale(unquote("min(1, calc(100cqi / 980))"));
   transform-origin: center center;
 }
 
